[package]
name = "peer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow        = "1.0.52"
bytemuck      = { version = "1.14", features = ["derive"] }
clap          = "3.0.8"
cpal          = "0.15"
env_logger    = "0.11"
futures       = "0.3"
log           = "0.4"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1.15.0", features = ["full"] }
webrtc        = "0.9.0"
base64        = "0.13.0"
lazy_static   = "1.4"
hyper         = { version = "0.14.16", features = ["full"] }
